// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<DismissableAlertComponent
  alertKey="foo"
  onDismiss={[Function]}
  variant="info"
>
  <div>
    My content
  </div>
</DismissableAlertComponent>
`;

exports[`should render correctly with a non-default display 1`] = `
<DismissableAlertComponent
  alertKey="foo"
  display="block"
  onDismiss={[Function]}
  variant="info"
>
  <div>
    My content
  </div>
</DismissableAlertComponent>
`;
